# ikea-led-obegraensad

./: .clang-format  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTION.md  LICENSE  README.md  blobs.py  ddp.py  docker-compose.yaml  example_secrets.ini  extra_script.py  gen_crt_bundle.py  getbuffer.py  platformio.ini  pyproject.toml  repomix-output.txt  upload.py  videoplayer.py
.github/: dependabot.yml
.github/workflows/: build-and-release.yaml  build.yaml  dependabot.yml
data/cert/: dst_root_ca_x3.pem
frontend/: .env  .prettierrc  biome.json  compress.js  compress.mjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.mts  vite.config.ts
frontend/src/: Creator.tsx  app.css.ts  app.scss  app.tsx  creator.css.ts  creator.tsx  helpers.ts  index.css  index.css.ts  index.scss  index.tsx  main.css.ts  main.tsx  scheduler.tsx  store.tsx  types.ts
include/: PluginManager.h  accelerometer.h  alexa.h  asyncwebserver.h  bml.h  config.h  constants.h  led.h  messages.h  mqtt.h  ota.h  restapi.h  scheduler.h  screen.h  secrets.h  signs.h  storage.h  timing.h  webgui.h  webhandler.h  webserver.h  websocket.h  ws.h
include/mode/: bigclock.h  breakout.h  circle.h  clock.h  custom.h  gameoflife.h  (+7 more)
src/: PluginManager.cpp  accelerometer.cpp  asyncwebserver.cpp  bml.cpp  config.cpp  led.cpp  main.cpp  messages.cpp  mqtt.cpp  ota.cpp  restapi.cpp  scheduler.cpp  screen.cpp  signs.cpp  storage.cpp  webgui.cpp  webhandler.cpp  webserver.cpp  websocket.cpp  ws.cpp
util/: bin2hex.py
(+124 files in other folders)
